Fix for alerts on mobile

--- a/src/Alert/components/_Alert.scss
+++ b/src/Alert/components/_Alert.scss
@@ -1,12 +1,9 @@
 @import '../../../sass/variables';
+
 // Desktop
 @media (min-width: 768px) {
-
-  // Apply with layout-card style to wrap an alert outside inside of layout-fill
   .forAlerts {
-    padding-top: 0px !important;
-    padding-bottom: 0px !important;
-    margin: 0 auto !important;
+    margin: -12px 0 -24px 0 !important;
   }
 
   .alertWrapper {
@@ -135,22 +132,31 @@
       float: left;
       padding-bottom: 1px;
       height: 100%;
-      margin-top: 0;
-      margin-right: 12px !important;
+      margin: 0 !important;
       span {
         font-size: 40px !important;
+        &.material-icons {
+          padding: 12px 12px 0 0 !important;
+        }
       }
     }
     .alertText {
       font-weight: normal !important;
       font-size: 14px !important;
-      line-height: 18px;
-      margin: 12px !important;
-      padding: 12px !important;
+      line-height: 20px !important;
+      padding: 23px 0 6px 0 !important;
+      margin: 0 !important;
       .alertTitle {
         font-weight: bold !important;
         font-size: 14px !important
       }
+    }
+    button.alertAction{
+      width: 100% !important;
+      height: auto !important;
+      line-height: 18px !important;
+      white-space: normal !important;
+      padding: 12px !important;
     }
 
     // Help
@@ -221,12 +227,6 @@
         svg {
           fill: $text-color-reverse !important;
         }
-      }
-      button.alertAction {
-        width: 100%;
-        background-color: darken($info-color, 15%) !important;
-        margin: 12px 0 6px 0 !important;
-        color: $text-color-reverse !important;
       }
     }
   }
